<resources>
    <string name="app_name" translatable="false">BJUT Wi-Fi</string>
    <string name="app_name_debug" translatable="false">BJUT Wi-Fi Debug</string>
    <string name="settings">Settings</string>
    <string name="pref_account">Account</string>
    <string name="pref_password">Password</string>
    <string name="pref_header_about">About</string>
    <string name="pref_version">Version</string>
    <string name="pref_source">Source code</string>
    <string name="pref_licenses">Open source licenses</string>
    <string name="pref_packages">Package</string>
    <string name="pref_user">User</string>
    <string name="pref_header_theme">Theme</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_debug">Debug</string>
    <string name="pref_debug_mode">Debug Mode</string>
    <string name="pref_debug_mode_summary">Device is always connected to BJUT Wi-Fi</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_refresh">Refresh</string>
    <string name="tile_icon_label">Wi-Fi Status</string>
    <string name="stats_time">Used: %d min</string>
    <string name="stats_fee">Balance: %.2f RMB</string>
    <string name="stats_login_failed">Login Failed.</string>
    <string name="stats_logout_failed">Logout Failed.</string>
    <string name="stats_logout_ok">Logout OK.</string>
    <string name="stats_refresh_ok">Refresh OK.</string>
    <string name="stats_refresh_failed">Refresh Failed.</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_open_app">Open app</string>
    <string name="status_no_network">No network available</string>
    <string name="status_mobile_network">Connected to mobile network</string>
    <string name="status_other_wifi">Connected to %s</string>
    <string name="status_not_logged_in">Not logged in</string>
    <string name="status_logged_in" translatable="false">%.3f MB / %d%%</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="source_code_url" translatable="false">https://github.com/yunowo/BJUTWiFi</string>
    <string name="theme_tick" translatable="false">✓</string>
    <string name="theme_title">Theme</string>
    <string name="theme_using">Using</string>
    <string name="theme_use">Use</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_red">Red</string>
    <string name="theme_purple">Purple</string>
    <string name="theme_orange">Orange</string>
    <string name="theme_pink">Pink</string>
    <string name="theme_green">Green</string>
    <string name="theme_teal">Teal</string>
    <string name="theme_indigo">Indigo</string>
    <string name="theme_black">Black</string>
    <string name="theme_green_yun">Yun Green</string>
    <string name="theme_purple_zerogo">ZeroGo Purple</string>
    <string name="license_title">Open Source Licenses</string>
    <string name="graph_header">Data usage of this month</string>
</resources>
