<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_theme">
        <Preference
            android:key="theme"
            android:title="@string/pref_theme"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_debug">
        <SwitchPreference
            android:key="debug"
            android:summary="@string/pref_debug_mode_summary"
            android:title="@string/pref_debug_mode"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">
        <Preference
            android:key="version"
            android:title="@string/pref_version"/>
        <Preference
            android:key="source"
            android:summary="@string/source_code_url"
            android:title="@string/pref_source"/>
        <Preference
            android:key="licenses"
            android:title="@string/pref_licenses"/>
    </PreferenceCategory>

</PreferenceScreen>
