<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_24dp"
        android:orderInCategory="50"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_users"
        android:orderInCategory="100"
        android:title="@string/pref_user"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>