<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/status_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:columnCount="2"
        android:rowCount="3">

        <io.netopen.hotbitmapgg.library.view.RingProgressBar
            android:id="@+id/progress_ring"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:layout_row="0"
            android:layout_rowSpan="3"
            app:max="100"
            app:ringColor="@color/ring_grey"
            app:ringProgressColor="@color/ring_blue"
            app:ringWidth="3dp"
            app:style="STROKE"
            app:textColor="@color/ring_blue"
            app:textIsShow="true"
            app:textSize="18sp"
            android:layout_gravity="center">

        </io.netopen.hotbitmapgg.library.view.RingProgressBar>

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="10dp"
            android:layout_row="0"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_gravity="fill_horizontal">


            <Button
                android:id="@+id/sign_in_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:text="@string/action_sign_in"
                android:minWidth="60dp" />

            <Button
                android:id="@+id/sign_out_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/action_sign_out"
                android:minWidth="60dp" />

            <Button
                android:id="@+id/refresh_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:text="@string/action_refresh"
                android:minWidth="60dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/flow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </GridLayout>
</android.support.v7.widget.CardView>